<resources>
    <string name="app_name">DiyCodeApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_activity_login">登录</string>
    <string name="app_activity_signUp">注册</string>
    <string name="app_activity_mine">我的</string>
    <string name="app_activity_setting">设置</string>
    <string name="app_activity_topic">话题</string>
    <string name="app_activity_release_topic">发布新话题</string>
    <string name="app_activity_select_node">选择节点</string>
    <string name="app_activity_about">关于我们</string>
    <string name="app_activity_my_topic">我的帖子</string>
    <string name="app_activity_my_comment">我的评论</string>
    <string name="app_activity_my_star">我的收藏</string>

    <string name="app_activity_back_exit_text">再按一次退出程序</string>

    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_notification">通知</string>
    <string name="action_search">搜索</string>
    <string name="search">输入关键字</string>

    <string name="login_text_forgot_pwd">忘记密码?</string>
    <string name="login_register_text">新用户注册</string>
    <string name="sign_up_hint_text">暂未开放该功能!</string>

    <string name="menu_my_topic">我的帖子</string>
    <string name="menu_my_star">我的收藏</string>
    <string name="menu_my_comment">我的评论</string>
    <string name="menu_my_share">我的分享</string>
    <string name="menu_about_us">关于我们</string>
    <string name="menu_soft_settings">软件设置</string>
    <string name="menu_open_web">在浏览器中打开</string>

    <string name="refresh_header_release_text">下拉放开后刷新...</string>
    <string name="refresh_header_swipe_text">下拉刷新</string>
    <string name="refresh_header_refreshing_text">正在加载中</string>
    <string name="refresh_header_complete_text">刷新完毕</string>

    <string name="load_footer_release_text">上拉放开后加载...</string>
    <string name="load_footer_swipe_text">上拉加载更多</string>
    <string name="load_footer_complete_text">加载完毕</string>
    <string name="load_empty_text">没有查到您要的数据</string>

    <string name="please_login_text">请先登录!</string>
    <string name="login_success_text">登录成功!</string>
    <string name="login_hint_text">用户名/密码不能为空!</string>
    <string name="token_error_text">Email/用户名或密码错误, 登录失败!</string>
    <string name="login_error_text">登录失败, 网络或者信息填写错误!</string>
    <string name="please_give_up_login_text">放弃登录!</string>

    <string name="fz_hei">fonts/FZXiHei.ttf</string>

    <string name="setting_text_now_version">当前版本</string>
    <string name="setting_text_clean_cache">清除缓存</string>
    <string name="setting_text_msg">消息通知</string>
    <string name="setting_text_check_version">检测版本</string>

    <string name="release_topic_text_node">点此选择节点</string>
    <string name="release_topic_text_title">标题：</string>
    <string name="release_topic_text_title_hint">在这里填写标题</string>
    <string name="release_topic_text_content_hint">在此出入话题内容</string>
    <string name="release_topic_text_error">标题，正文不能为空!</string>
    <string name="release_topic_text_node_error">请选择节点!</string>

</resources>
