<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_topic"
            android:icon="@mipmap/ic_topic_black_24dp"
            android:title="@string/menu_my_topic" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@mipmap/ic_star_black_24dp"
            android:title="@string/menu_my_star" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@mipmap/ic_comment_black_24dp"
            android:title="@string/menu_my_comment" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about_black_24dp"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/menu_soft_settings" />
    </group>

</menu>
